--- a/03_程序的机器级表示/3.4_访问信息/00_3.4.1_操作数说明符.md
+++ b/03_程序的机器级表示/3.4_访问信息/00_3.4.1_操作数说明符.md
@@ -5,3 +5,69 @@ Lecture: 03_程序的机器级表示/3.4_访问信息
 Content: 00_3.4.1_操作数说明符
 """
 
+## 深度分析《计算机系统：程序员的视角》中的 3.4.1 操作数说明符
+
+### 章节概述
+在《计算机系统：程序员的视角》第 3.4.1 节中，作者详细介绍了 x86-64 架构下的操作数说明符（Operand Specifiers）。操作数说明符是指示操作数来源和存储位置的关键元素，分为立即数（Immediate）、寄存器（Register）和内存引用（Memory Reference）三种类型。通过这三种类型，指令可以从常量、寄存器或内存中获取数据，并将结果存储在寄存器或内存中。
+
+### 操作数类型
+
+#### 立即数（Immediate）
+立即数是一种常量值，在 x86-64 的 ATT 格式汇编代码中，以 `$` 符号开头，后跟一个整数。例如：`$-577` 或 `$0x1F`。不同指令允许不同范围的立即数值，汇编器会自动选择最紧凑的编码方式。
+
+#### 寄存器（Register）
+寄存器操作数指寄存器的内容。在 x86-64 架构中，有 16 个通用寄存器，每个寄存器可以访问其低位的 8 位、16 位、32 位或 64 位部分。寄存器操作数通常用 `ra` 表示某个寄存器，用 `R[ra]` 表示该寄存器的值，将寄存器视为索引数组 R。
+
+#### 内存引用（Memory Reference）
+内存引用操作数用于访问根据计算地址指定的某个内存位置，也称为有效地址（Effective Address）。内存被视为一个大的字节数组，`Mb[Addr]` 表示从地址 Addr 开始存储的 b 字节值。简化起见，通常省略下标 b。内存引用的形式多样，允许不同的内存引用方式，包括绝对地址、间接引用、基址加偏移、索引和比例索引等。
+
+### 内存引用的形式
+
+x86-64 支持多种内存引用形式，如图 3.3 所示。这些形式允许不同的内存引用方式，最一般的形式为 `Imm(rb,ri,s)`，包含四个组成部分：立即数偏移量 Imm、基址寄存器 rb、索引寄存器 ri 和比例因子 s（必须是 1、2、4 或 8）。基址和索引寄存器必须是 64 位寄存器，有效地址计算公式为 `Imm + R[rb] + R[ri] * s`。其他形式是该一般形式的特例，其中省略了某些组成部分。这种复杂的寻址方式在引用数组和结构体元素时非常有用。
+
+### 操作数说明符的分类
+
+1. **立即数操作数（Immediate Operands）**：
+   - 表示一个常量值。
+   - 在汇编代码中，用 `$` 符号表示。
+   - 示例：`$10` 表示十进制数 10，`$0x1F` 表示十六进制数 31。
+
+2. **寄存器操作数（Register Operands）**：
+   - 表示寄存器的内容。
+   - 示例：`%rax` 表示寄存器 RAX 的内容。
+
+3. **内存操作数（Memory Operands）**：
+   - 表示存储在内存中的值，通过计算得到的有效地址访问。
+   - 示例：`(%rax)` 表示内存地址 RAX 的内容，`4(%rax)` 表示 RAX 地址加 4 的内容。
+
+### 实践问题
+
+在本节的实践问题中，假设在指定的内存地址和寄存器中存储了以下值：
+
+- 地址 0x100 处存储 0xFF
+- 地址 0x104 处存储 0xAB
+- 地址 0x108 处存储 0x13
+- 地址 0x10C 处存储 0x11
+- 寄存器 `%rax` 的值为 0x100
+- 寄存器 `%rcx` 的值为 0x1
+- 寄存器 `%rdx` 的值为 0x3
+
+通过填写表格，学生可以练习计算不同操作数的值，从而加深对操作数说明符的理解。
+
+### 详细解析
+
+#### 立即数
+立即数（Immediate Operand）是硬编码在指令中的常量值，不需要从内存或寄存器中读取。立即数通常用在需要一个固定值的场景中，如设置一个寄存器为某个常量值。由于其简单直接，立即数操作在硬件实现中相对高效，但也由于其固定性，灵活性较差。
+
+#### 寄存器
+寄存器操作数是指令中直接使用寄存器中的值。x86-64 架构有 16 个通用寄存器，每个寄存器可以按 8 位、16 位、32 位或 64 位访问。寄存器操作数通常用于需要快速访问和操作的数据，因为寄存器的访问速度比内存要快得多。寄存器操作数的一个重要特性是它们支持不同的数据大小操作，这使得它们在处理不同类型的数据时非常灵活。
+
+#### 内存引用
+内存引用操作数用于访问存储在内存中的数据。x86-64 支持多种内存地址计算方式，包括直接地址、基址加偏移、基址加索引等。这些不同的地址计算方式使得内存引用操作数在处理复杂数据结构（如数组和结构体）时非常灵活。内存引用的有效地址计算通过组合基址寄存器、索引寄存器、偏移量和比例因子来完成，这使得它能够高效地支持多维数组和复杂数据结构的访问。
+
+### 例子和应用
+
+在实际编程中，操作数说明符的选择对程序性能有重要影响。例如，在处理大量数据时，寄存器操作数由于其访问速度快，往往比内存引用操作数更有效。然而，由于寄存器数量有限，在处理大规模数据时，不得不使用内存引用操作数。通过合理使用立即数、寄存器和内存引用操作数，可以显著优化程序性能。
+
+### 小结
+操作数说明符是汇编语言和机器语言中的基本概念，是指令集架构设计的核心组成部分。理解和掌握不同类型的操作数说明符及其使用场景，是深入学习计算机系统和编程的基础。在 x86-64 架构中，操作数说明符的多样性提供了灵活的数据访问和操作方式，使得该架构在处理复杂计算任务时表现出色。
