--- a/03_程序的机器级表示/3.5_算术和逻辑运算/00_3.5.1_加载有效地址.md
+++ b/03_程序的机器级表示/3.5_算术和逻辑运算/00_3.5.1_加载有效地址.md
@@ -5,3 +5,64 @@ Lecture: 03_程序的机器级表示/3.5_算术和逻辑运算
 Content: 00_3.5.1_加载有效地址
 """
 
+### 3.5.1 加载有效地址
+
+在程序的机器级表示中，`LEA`（Load Effective Address）指令是一个非常重要的概念，尤其是在 x86-64 架构中。`LEA`指令被广泛用于地址计算，但它实际上并不执行内存访问操作。以下是对这一章节的详细分析。
+
+#### `LEA` 指令的基本功能
+
+`LEA` 指令的形式如下：
+```
+leaq S, D
+```
+其中，`S` 是源操作数，表示一个内存地址表达式，而 `D` 是目的操作数，必须是一个寄存器。`LEA` 指令的作用是将源操作数 `S` 的有效地址计算出来，并存储到目的操作数 `D` 中。注意，`LEA` 指令并不实际读取内存中的数据，它只是进行地址计算。
+
+例如，指令 `leaq 7(%rdx,%rdx,4), %rax` 会将 `%rdx` 寄存器中的值乘以 4 加上自身再加上 7，并将结果存储到 `%rax` 寄存器中。假设 `%rdx` 的初始值为 `x`，则执行后 `%rax` 中的值为 `5x + 7`。
+
+#### `LEA` 指令的用途
+
+1. **指针运算**：`LEA` 指令可以用于指针运算。例如，`leaq (%rdx,%rdx,4), %rax` 可以快速计算出复杂的地址表达式，而无需临时变量。
+2. **地址计算**：在数组和结构体操作中，`LEA` 指令可以用于高效地计算元素地址。例如，访问二维数组的元素时，`LEA` 可以用来计算偏移量。
+3. **算术运算**：尽管 `LEA` 是一个地址计算指令，但它也可以用于一般的算术运算，例如加法和乘法，这在优化编译器生成代码时非常有用。
+
+#### `LEA` 指令的优势
+
+1. **效率高**：`LEA` 指令可以在一个指令中完成复杂的地址计算，减少了指令的数量，提高了执行效率。
+2. **灵活性强**：`LEA` 指令可以处理各种复杂的地址表达式，支持多种操作数组合形式。
+3. **无副作用**：由于 `LEA` 指令不实际访问内存，只进行地址计算，因此不会引发内存访问错误。
+
+#### 示例分析
+
+考虑以下 C 代码：
+```c
+long scale(long x, long y, long z) {
+    long t = x + 4 * y + 12 * z;
+    return t;
+}
+```
+编译后的汇编代码如下：
+```assembly
+scale:
+    leaq (%rdi,%rsi,4), %rax   # 计算 x + 4*y
+    leaq (%rdx,%rdx,2), %rdx   # 计算 z + 2*z = 3*z
+    leaq (%rax,%rdx,4), %rax   # 计算 (x+4*y) + 4*(3*z) = x + 4*y + 12*z
+    ret
+```
+在这个例子中，`LEA` 指令被用于高效地计算复杂的算术表达式，而不需要额外的临时变量和指令。
+
+#### 练习题
+
+假设寄存器 `%rbx` 保存了值 `p`，寄存器 `%rdx` 保存了值 `q`，下表展示了不同 `LEA` 指令对 `%rax` 寄存器值的影响：
+
+| 指令                     | 结果                  |
+|-------------------------|-----------------------|
+| leaq 9(%rdx), %rax      | %rax = q + 9          |
+| leaq (%rdx,%rbx), %rax  | %rax = q + p          |
+| leaq (%rdx,%rbx,3), %rax| %rax = q + 3*p        |
+| leaq 2(%rbx,%rbx,7), %rax| %rax = p + 7*p + 2   |
+| leaq 0xE(,%rdx,3), %rax | %rax = 3*q + 0xE      |
+| leaq 6(%rbx,%rdx,7), %rax| %rax = q + 7*p + 6   |
+
+通过这些示例可以看出，`LEA` 指令能够灵活地处理各种复杂的地址和算术运算，极大地提高了代码的执行效率和可读性。
+
+综上所述，`LEA` 指令在 x86-64 架构中的应用非常广泛，不仅在地址计算中发挥了重要作用，而且在编译器优化和高效代码生成中也具有不可替代的地位。理解和掌握 `LEA` 指令的使用方法，对深入学习和优化程序性能具有重要意义。
