--- a/03_程序的机器级表示/3.5_算术和逻辑运算/02_3.5.3_移位运算.md
+++ b/03_程序的机器级表示/3.5_算术和逻辑运算/02_3.5.3_移位运算.md
@@ -5,3 +5,71 @@ Lecture: 03_程序的机器级表示/3.5_算术和逻辑运算
 Content: 02_3.5.3_移位运算
 """
 
+### 3.5.3 移位运算
+
+在计算机程序的机器级表示中，移位运算（Shift Operations）是非常重要的位操作，用于高效地进行数据处理。移位运算包括左移（Left Shift）和右移（Right Shift），右移又分为逻辑右移（Logical Right Shift）和算术右移（Arithmetic Right Shift）。以下是对这一章节的详细分析。
+
+#### 左移运算 (Left Shift)
+
+左移运算将一个数的二进制表示向左移动若干位，在低位补0。这一操作相当于将该数乘以2的若干次方。指令格式如下：
+```
+sal k, D 或 shl k, D
+```
+其中，`k` 是移位位数，`D` 是目的操作数。`sal` 和 `shl` 在效果上是一样的，都是左移运算。例如，指令 `shl $3, %rax` 将 `%rax` 寄存器中的值左移3位，相当于乘以8。
+
+#### 逻辑右移 (Logical Right Shift)
+
+逻辑右移将一个数的二进制表示向右移动若干位，在高位补0。这一操作相当于将该数除以2的若干次方，并向下取整。指令格式如下：
+```
+shr k, D
+```
+例如，指令 `shr $2, %rbx` 将 `%rbx` 寄存器中的值右移2位，相当于除以4，并且在高位补0。
+
+#### 算术右移 (Arithmetic Right Shift)
+
+算术右移将一个数的二进制表示向右移动若干位，在高位补符号位（即最左边的一位）。这对于处理有符号数尤其重要，因为它保持了数的正负号。指令格式如下：
+```
+sar k, D
+```
+例如，指令 `sar $1, %rcx` 将 `%rcx` 寄存器中的值右移1位，并在高位补符号位。
+
+#### 示例分析
+
+考虑以下示例：
+- 对于8位二进制数 `01100011`，左移4位的结果是 `00110000`，低位补0，高位超出的位被丢弃。
+- 对于8位二进制数 `10010101`，逻辑右移4位的结果是 `00001001`，高位补0。
+- 对于8位二进制数 `10010101`，算术右移4位的结果是 `11111001`，高位补符号位1。
+
+在这些运算中，我们可以看到不同的移位操作如何影响数值。左移使数值变大，而右移使数值变小，其中逻辑右移适用于无符号数，算术右移适用于有符号数。
+
+#### 实践应用
+
+移位运算在程序中有广泛的应用，包括但不限于以下场景：
+1. **快速乘除法**：移位运算可以用来快速进行乘法和除法。例如，将数值左移n位相当于乘以2的n次方，而右移n位相当于除以2的n次方。
+2. **位操作**：在处理位级别的数据时，移位运算非常有用，例如在加密算法、校验码计算中。
+3. **优化性能**：移位运算在某些情况下比乘法和除法运算更高效，能够显著提升程序性能。
+
+#### 代码示例
+
+假设有如下C代码：
+```c
+long shift_example(long x, long n) {
+    x <<= 4;
+    x >>= n;
+    return x;
+}
+```
+对应的汇编代码如下：
+```assembly
+shift_example:
+    movq %rdi, %rax   # 将 x 的值移到 %rax
+    salq $4, %rax     # 左移4位
+    movl %esi, %ecx   # 将 n 的值移到 %ecx
+    sarq %cl, %rax    # 算术右移 n 位
+    ret
+```
+在这个示例中，`salq` 指令将 `x` 左移4位，`sarq` 指令根据 `n` 的值对 `x` 进行算术右移。这种移位操作的组合可以实现复杂的位操作，具有高度的灵活性和效率。
+
+### 总结
+
+移位运算是程序设计中基本且重要的操作，通过左移和右移（包括逻辑右移和算术右移），可以高效地进行数据处理。理解这些操作及其应用场景，有助于优化程序性能和实现复杂的算法。
