--- a/03_程序的机器级表示/3.6_控制/00_3.6.1_条件码.md
+++ b/03_程序的机器级表示/3.6_控制/00_3.6.1_条件码.md
@@ -5,3 +5,65 @@ Lecture: 03_程序的机器级表示/3.6_控制
 Content: 00_3.6.1_条件码
 """
 
+### 3.6.1 条件码
+
+在机器级编程中，条件码是处理器用来描述最近一次算术或逻辑操作结果的单比特寄存器。这些条件码被用来进行条件跳转和其他控制流操作。理解条件码的工作原理对于编写和调试底层代码至关重要。以下是对这一章节的详细分析。
+
+#### 条件码的基本概念
+
+x86-64架构中，常用的条件码包括：
+- **CF（Carry Flag）进位标志**：在无符号运算中，表示最高有效位的进位。例如，在加法运算中，如果结果超过了寄存器所能表示的最大值，则设置CF。
+- **ZF（Zero Flag）零标志**：表示结果是否为零。如果最近的运算结果为零，则设置ZF。
+- **SF（Sign Flag）符号标志**：表示结果是否为负数。如果最近的运算结果为负，则设置SF。
+- **OF（Overflow Flag）溢出标志**：在有符号运算中，表示运算结果是否超出了表示范围。例如，当加法运算导致正溢出或负溢出时，设置OF。
+
+这些条件码的设置与具体的操作有关，例如，加法指令会根据运算结果设置这些条件码，而一些指令如 `leaq`（加载有效地址）则不会改变条件码，因为它们仅用于地址计算。
+
+#### 影响条件码的指令
+
+大多数算术和逻辑指令都会设置条件码。以下是一些常见指令及其对条件码的影响：
+- **逻辑操作**：如 `xor`，会将CF和OF设置为零。
+- **移位操作**：如 `shl` 和 `shr`，会根据移位出的最后一位设置CF，而OF被设置为零。
+- **递增和递减指令**：如 `inc` 和 `dec`，会设置OF和ZF，但不会改变CF。
+
+此外，还有一些专门的指令用于设置条件码而不改变其他寄存器的值：
+- **cmp 指令**：用于比较两个操作数，设置条件码但不改变操作数的值。
+- **test 指令**：用于按位与操作，设置条件码但不改变操作数的值。
+
+例如，指令 `cmpq %rsi, %rdi` 会计算 `%rdi - %rsi` 并设置相应的条件码，`testq %rax, %rax` 则会设置 `%rax` 中值的符号和零标志。
+
+#### 访问条件码
+
+访问条件码主要通过三种方式：
+1. **设置单字节的值为0或1**：使用`set`指令，根据条件码的状态设置单字节寄存器或内存位置为0或1。例如，`sete %al` 根据ZF的状态将 `%al` 设置为0或1。
+2. **条件跳转**：使用`j`指令，根据条件码的状态进行跳转。例如，`je` 指令在ZF为1时跳转，`jg` 指令在SF和OF异或为0且ZF为0时跳转。
+3. **条件传输数据**：使用`cmov`指令，根据条件码的状态有条件地移动数据。例如，`cmove` 指令在ZF为1时移动数据，`cmovg` 指令在SF和OF异或为0且ZF为0时移动数据。
+
+#### 实例分析
+
+考虑以下C代码：
+```c
+int comp(data_t a, data_t b) {
+    return a < b;
+}
+```
+其汇编代码如下：
+```assembly
+comp:
+    cmpq %rsi, %rdi    ; 比较a和b
+    setl %al           ; 如果a < b，将%al设置为1
+    movzbl %al, %eax   ; 将%al的值零扩展到%eax
+    ret
+```
+在这个例子中，`cmpq` 指令比较了两个操作数并设置条件码，`setl` 指令根据条件码将结果存储到 `%al` 寄存器中，`movzbl` 指令则将 `%al` 扩展为32位存储在 `%eax` 中。
+
+#### 条件码在控制流中的应用
+
+条件码在控制流中有广泛的应用，例如实现条件语句和循环结构。以下是一些常见的应用场景：
+- **条件分支**：通过条件跳转实现，例如 `if-else` 结构。
+- **循环控制**：通过条件跳转实现循环的开始和结束，例如 `for` 和 `while` 结构。
+- **条件传输**：通过条件传输指令在特定条件下移动数据，提高程序效率。
+
+### 总结
+
+条件码是机器级程序中不可或缺的一部分，它们提供了一种高效的方法来处理条件操作和控制流。理解条件码的设置和使用对于编写高效的汇编程序至关重要。
