--- a/03_程序的机器级表示/3.6_控制/01_3.6.2_访问条件码.md
+++ b/03_程序的机器级表示/3.6_控制/01_3.6.2_访问条件码.md
@@ -5,3 +5,90 @@ Lecture: 03_程序的机器级表示/3.6_控制
 Content: 01_3.6.2_访问条件码
 """
 
+### 3.6.2 访问条件码
+
+在机器级编程中，访问条件码是控制流操作的核心之一。条件码（Condition Codes）提供了关于最近一次算术或逻辑操作结果的关键信息，这些信息用于决定程序的执行路径。以下是对这一章节的详细分析。
+
+#### 条件码的概述
+
+在 x86-64 架构中，条件码包括：
+- **CF（Carry Flag）进位标志**：用于检测无符号运算中的溢出。
+- **ZF（Zero Flag）零标志**：当运算结果为零时设置。
+- **SF（Sign Flag）符号标志**：当运算结果为负时设置。
+- **OF（Overflow Flag）溢出标志**：用于检测有符号运算中的溢出。
+
+这些条件码在执行算术和逻辑操作时会被设置或清除，并在后续的条件跳转或数据传输操作中被读取。
+
+#### 访问条件码的方法
+
+访问条件码主要通过以下三种方式进行：
+1. **设置单字节的值为0或1**：使用`set`指令，根据条件码的状态设置单字节寄存器或内存位置为0或1。
+2. **条件跳转**：使用`j`指令，根据条件码的状态进行跳转。
+3. **条件传输数据**：使用`cmov`指令，根据条件码的状态有条件地移动数据。
+
+这些方法使得程序能够根据特定条件执行不同的操作，从而实现复杂的控制流。
+
+#### 设置单字节的值为0或1
+
+`set`指令用于根据条件码的状态设置单字节寄存器或内存位置为0或1。常见的`set`指令及其效果包括：
+- `sete D` 或 `setz D`：当ZF为1时设置D为1（相等/零）。
+- `setne D` 或 `setnz D`：当ZF为0时设置D为1（不相等/非零）。
+- `sets D`：当SF为1时设置D为1（负）。
+- `setns D`：当SF为0时设置D为1（非负）。
+
+例如，以下汇编代码比较两个数并根据结果设置寄存器的值：
+```assembly
+cmpq %rsi, %rdi    ; 比较a和b
+setl %al           ; 如果a < b，将%al设置为1
+movzbl %al, %eax   ; 将%al的值零扩展到%eax
+```
+
+#### 条件跳转
+
+条件跳转指令根据条件码的状态决定程序是否跳转到指定的地址。常见的条件跳转指令包括：
+- `je` 或 `jz`：当ZF为1时跳转（相等/零）。
+- `jne` 或 `jnz`：当ZF为0时跳转（不相等/非零）。
+- `jg` 或 `jnle`：当SF与OF异或为0且ZF为0时跳转（大于，带符号）。
+- `jl` 或 `jnge`：当SF与OF异或为1时跳转（小于，带符号）。
+
+例如，以下汇编代码展示了如何根据比较结果进行条件跳转：
+```assembly
+cmpq %rsi, %rdi    ; 比较a和b
+je equal_label     ; 如果相等，跳转到equal_label
+```
+
+#### 条件传输数据
+
+条件传输指令`cmov`根据条件码的状态有条件地将源操作数传输到目的寄存器。常见的条件传输指令包括：
+- `cmove` 或 `cmovz`：当ZF为1时传输（相等/零）。
+- `cmovne` 或 `cmovnz`：当ZF为0时传输（不相等/非零）。
+- `cmovg` 或 `cmovnle`：当SF与OF异或为0且ZF为0时传输（大于，带符号）。
+- `cmovl` 或 `cmovnge`：当SF与OF异或为1时传输（小于，带符号）。
+
+例如，以下汇编代码展示了如何根据条件码状态传输数据：
+```assembly
+cmpq %rsi, %rdi    ; 比较a和b
+cmovg %rsi, %rax   ; 如果a > b，将%rsi的值传输到%rax
+```
+
+### 实例分析
+
+考虑以下C代码：
+```c
+int comp(data_t a, data_t b) {
+    return a < b;
+}
+```
+其汇编代码如下：
+```assembly
+comp:
+    cmpq %rsi, %rdi    ; 比较a和b
+    setl %al           ; 如果a < b，将%al设置为1
+    movzbl %al, %eax   ; 将%al的值零扩展到%eax
+    ret
+```
+在这个例子中，`cmpq`指令比较了两个操作数并设置条件码，`setl`指令根据条件码将结果存储到`%al`寄存器中，`movzbl`指令则将`%al`扩展为32位存储在`%eax`中。
+
+### 总结
+
+访问条件码是控制流操作的重要组成部分，通过设置单字节的值为0或1、条件跳转和条件传输数据，程序能够根据运算结果执行不同的操作。这种机制不仅提高了程序的灵活性，还在实现复杂控制流时提供了高效的方法。
