--- a/03_程序的机器级表示/3.6_控制/02_3.6.3_跳转指令.md
+++ b/03_程序的机器级表示/3.6_控制/02_3.6.3_跳转指令.md
@@ -5,3 +5,92 @@ Lecture: 03_程序的机器级表示/3.6_控制
 Content: 02_3.6.3_跳转指令
 """
 
+### 3.6.3 跳转指令
+
+在机器级编程中，跳转指令是控制程序流程的关键工具。它们允许程序在特定条件下改变执行路径，从而实现复杂的控制流结构。以下是对跳转指令的详细分析。
+
+#### 跳转指令的类型
+
+跳转指令可以分为两大类：无条件跳转（unconditional jump）和条件跳转（conditional jump）。
+
+1. **无条件跳转 (jmp)**：
+   - **直接跳转 (direct jump)**：跳转目标是硬编码在指令中的。例如，`jmp .L1` 会无条件地跳转到标签 `.L1` 所在的位置。
+   - **间接跳转 (indirect jump)**：跳转目标存储在寄存器或内存位置中。例如，`jmp *%rax` 使用 `%rax` 寄存器中的值作为跳转目标地址。
+
+2. **条件跳转**：
+   条件跳转指令根据条件码的状态决定是否跳转。常见的条件跳转指令包括：
+   - `je` 或 `jz`：当零标志 (ZF) 为 1 时跳转（相等/零）。
+   - `jne` 或 `jnz`：当零标志 (ZF) 为 0 时跳转（不相等/非零）。
+   - `js`：当符号标志 (SF) 为 1 时跳转（负数）。
+   - `jns`：当符号标志 (SF) 为 0 时跳转（非负数）。
+   - `jg` 或 `jnle`：当 SF 和 OF 异或为 0 且 ZF 为 0 时跳转（大于，带符号）。
+   - `jge` 或 `jnl`：当 SF 和 OF 异或为 0 时跳转（大于等于，带符号）。
+   - `jl` 或 `jnge`：当 SF 和 OF 异或为 1 时跳转（小于，带符号）。
+   - `jle` 或 `jng`：当 SF 和 OF 异或为 1 或 ZF 为 1 时跳转（小于等于，带符号）。
+
+#### 跳转指令的使用
+
+跳转指令广泛用于实现控制结构，如条件语句和循环。以下是一些典型的使用场景：
+
+1. **条件语句**：
+   条件跳转指令常用于实现 `if-else` 结构。例如：
+   ```assembly
+   cmpq %rsi, %rdi    ; 比较 a 和 b
+   je equal_label     ; 如果相等，跳转到 equal_label
+   ```
+
+2. **循环结构**：
+   跳转指令也用于实现循环结构，如 `for` 和 `while` 循环。例如：
+   ```assembly
+   loop_start:
+       ; 循环体代码
+       cmpq %rcx, %rbx
+       jne loop_start ; 如果不相等，跳转回循环开始
+   ```
+
+#### 实例分析
+
+考虑以下 C 代码：
+```c
+long absdiff(long x, long y) {
+    long result;
+    if (x < y) {
+        result = y - x;
+    } else {
+        result = x - y;
+    }
+    return result;
+}
+```
+其汇编代码如下：
+```assembly
+absdiff:
+    cmpq %rsi, %rdi   ; 比较 x 和 y
+    jge .L1           ; 如果 x >= y，跳转到 .L1
+    subq %rdi, %rsi   ; result = y - x
+    movq %rsi, %rax   ; 将结果存储在 %rax 中
+    ret
+.L1:
+    subq %rsi, %rdi   ; result = x - y
+    movq %rdi, %rax   ; 将结果存储在 %rax 中
+    ret
+```
+在这个例子中，`cmpq` 指令比较了两个操作数并设置条件码，`jge` 指令根据条件码决定是否跳转到标签 `.L1`。如果 `x >= y`，程序将跳转到标签 `.L1` 继续执行；否则，程序将执行减法 `y - x` 并返回结果。
+
+#### 跳转指令的编码
+
+跳转指令在机器码中有多种编码方式，最常用的是基于程序计数器 (PC) 相对地址的编码。这种编码方式计算跳转目标与跳转指令之后一条指令之间的偏移量，并将该偏移量编码在跳转指令中。例如：
+```assembly
+jmp .L1
+```
+这个指令的编码可能如下：
+```assembly
+0: eb 03      ; jmp 指令，目标偏移量为 3
+1: ...        ; 跳转指令之后的指令
+4: ...        ; .L1 标签对应的指令
+```
+通过这种方式，跳转指令可以被紧凑地编码，并且目标地址在链接和加载过程中可以灵活调整。
+
+### 总结
+
+跳转指令在控制程序流程中发挥着至关重要的作用。通过合理使用跳转指令，可以实现复杂的控制结构，提高程序的灵活性和效率。理解跳转指令的工作原理及其在汇编代码中的应用，对于编写和优化低级别程序具有重要意义   。
