--- a/03_程序的机器级表示/3.6_控制/03_3.6.4_跳转指令编码.md
+++ b/03_程序的机器级表示/3.6_控制/03_3.6.4_跳转指令编码.md
@@ -5,3 +5,65 @@ Lecture: 03_程序的机器级表示/3.6_控制
 Content: 03_3.6.4_跳转指令编码
 """
 
+### 3.6.4 跳转指令编码
+
+在机器级编程中，跳转指令的编码方式对于程序的控制流至关重要。跳转指令允许程序在特定条件下改变执行路径，跳转到新的位置执行代码。以下是对跳转指令编码的详细分析。
+
+#### 跳转指令的类型
+
+跳转指令主要分为两类：无条件跳转（unconditional jump）和条件跳转（conditional jump）。
+
+1. **无条件跳转 (jmp)**：
+   - **直接跳转 (direct jump)**：跳转目标在指令中直接编码。例如，`jmp .L1` 无条件跳转到标签 `.L1`。
+   - **间接跳转 (indirect jump)**：跳转目标存储在寄存器或内存位置中。例如，`jmp *%rax` 使用 `%rax` 寄存器中的值作为跳转目标地址。
+
+2. **条件跳转**：
+   条件跳转指令根据条件码的状态决定是否跳转。常见的条件跳转指令包括：
+   - `je` 或 `jz`：当零标志 (ZF) 为 1 时跳转（相等/零）。
+   - `jne` 或 `jnz`：当零标志 (ZF) 为 0 时跳转（不相等/非零）。
+   - `jg` 或 `jnle`：当 SF 和 OF 异或为 0 且 ZF 为 0 时跳转（大于，带符号）。
+   - `jl` 或 `jnge`：当 SF 和 OF 异或为 1 时跳转（小于，带符号）。
+   - 其他条件跳转指令类似，都是根据不同的条件码状态进行跳转。
+
+#### 跳转指令的编码方法
+
+跳转指令的编码方式有多种，常见的是 PC 相对地址编码（PC-relative encoding）和绝对地址编码（absolute address encoding）。
+
+1. **PC 相对地址编码**：
+   - 这种编码方式计算跳转目标地址与跳转指令之后一条指令地址之间的偏移量，并将该偏移量编码在跳转指令中。这种方式可以使用 1、2 或 4 字节来编码偏移量。
+   - 例如，指令 `jmp .L2` 编码为 `eb 03`，其中 `03` 表示偏移量为3个字节。
+
+2. **绝对地址编码**：
+   - 使用 4 字节直接指定跳转目标地址。这种方式较少使用，因为 PC 相对地址编码更为灵活且节省空间。
+
+#### 实例分析
+
+考虑以下汇编代码示例：
+```assembly
+1  movq %rdi, %rax
+2  jmp .L2
+3  .L3:
+4  sarq %rax
+5  .L2:
+6  testq %rax, %rax
+7  jg .L3
+8  rep; ret
+```
+该代码包含两个跳转指令：第2行的 `jmp` 指令向前跳转，第7行的 `jg` 指令向后跳转。
+
+汇编生成的二进制代码如下：
+```assembly
+1  0:  48 89 f8        mov %rdi,%rax
+2  3:  eb 03           jmp 8 <loop+0x8>
+3  5:  48 d1 f8        sar %rax
+4  8:  48 85 c0        test %rax,%rax
+5  b:  7f f8           jg 5 <loop+0x5>
+6  d:  f3 c3           repz retq
+```
+在这个二进制代码中，第2行 `jmp` 指令的目标地址编码为 `03`，表示从当前地址开始偏移3个字节，即跳转到地址 `0x8`。第5行 `jg` 指令的目标地址编码为 `f8`，使用两补数表示负8，表示跳转到地址 `0x5`。
+
+通过这种方式，跳转指令可以紧凑地编码，并且目标地址可以在链接和加载过程中灵活调整。
+
+### 总结
+
+跳转指令的编码对于控制程序流程至关重要。PC 相对地址编码提供了一种高效且灵活的方法来实现跳转，节省了编码空间并允许程序在内存中重新定位时无需修改跳转指令。理解跳转指令的编码方式对于编写和优化机器级程序具有重要意义。
