--- a/03_程序的机器级表示/3.6_控制/06_3.6.7_循环.md
+++ b/03_程序的机器级表示/3.6_控制/06_3.6.7_循环.md
@@ -5,3 +5,132 @@ Lecture: 03_程序的机器级表示/3.6_控制
 Content: 06_3.6.7_循环
 """
 
+### 3.6.7 循环
+
+在机器级编程中，循环结构是实现重复执行代码段的关键技术。C 语言提供了几种循环结构，主要包括 `do-while`、`while` 和 `for`。虽然在机器代码中没有直接对应的循环指令，但可以通过条件测试和跳转指令的组合来实现循环的效果。以下是对这一章节的详细分析。
+
+#### `do-while` 循环
+
+`do-while` 循环的基本形式如下：
+```c
+do {
+    body-statement;
+} while (test-expr);
+```
+这种循环结构的特点是先执行循环体，然后进行条件测试，如果条件满足则继续循环。对应的汇编代码结构如下：
+```assembly
+loop:
+    body-statement
+    t = test-expr
+    if (t) goto loop
+```
+在每次迭代中，程序先执行循环体，然后测试条件表达式。如果测试成功，程序将返回循环开始位置继续执行。
+
+#### `while` 循环
+
+`while` 循环的基本形式如下：
+```c
+while (test-expr) {
+    body-statement;
+}
+```
+这种循环结构在执行循环体之前先测试条件表达式，如果条件满足则执行循环体。可以通过两种策略将其转换为机器代码：跳转到中间（jump to middle）和带守卫的 `do`（guarded-do）。
+
+##### 跳转到中间（Jump to Middle）
+
+这种方法通过在循环开始时进行条件测试来实现：
+```assembly
+goto test;
+loop:
+    body-statement
+test:
+    t = test-expr
+    if (t) goto loop
+```
+例如，以下是用这种方法实现的阶乘函数的汇编代码：
+```assembly
+fact_while:
+    movl $1, %eax       ; Set result = 1
+    jmp .L5             ; Goto test
+.L6:                    ; Loop:
+    imulq %rdi, %rax    ; Compute result *= n
+    subq $1, %rdi       ; Decrement n
+.L5:                    ; Test:
+    cmpq $1, %rdi       ; Compare n:1
+    jg .L6              ; If >, goto loop
+    rep; ret            ; Return
+```
+
+##### 带守卫的 `do`（Guarded-Do）
+
+这种方法在进入循环体之前进行条件测试，并在测试失败时跳转到循环结束：
+```assembly
+init-expr
+t = test-expr
+if (!t) goto done
+loop:
+    body-statement
+    update-expr
+    t = test-expr
+    if (t) goto loop
+done:
+```
+例如，以下是用这种方法实现的阶乘函数的汇编代码：
+```assembly
+fact_while:
+    cmpq $1, %rdi       ; Compare n:1
+    jle .L7             ; If <=, goto done
+    movl $1, %eax       ; Set result = 1
+.L6:                    ; Loop:
+    imulq %rdi, %rax    ; Compute result *= n
+    subq $1, %rdi       ; Decrement n
+    cmpq $1, %rdi       ; Compare n:1
+    jne .L6             ; If !=, goto loop
+.L7:                    ; Done:
+    rep; ret            ; Return
+```
+
+#### `for` 循环
+
+`for` 循环的基本形式如下：
+```c
+for (init-expr; test-expr; update-expr) {
+    body-statement;
+}
+```
+这种循环结构在进入循环体之前进行初始化表达式，然后在每次迭代之前进行条件测试，并在每次迭代之后进行更新表达式。可以将 `for` 循环转换为 `while` 循环来实现：
+```c
+init-expr
+while (test-expr) {
+    body-statement;
+    update-expr;
+}
+```
+例如，以下是用 `for` 循环实现的阶乘函数及其汇编代码：
+```c
+long fact_for(long n) {
+    long i;
+    long result = 1;
+    for (i = 2; i <= n; i++)
+        result *= i;
+    return result;
+}
+```
+对应的汇编代码如下：
+```assembly
+fact_for:
+    movl $1, %eax       ; Set result = 1
+    movl $2, %edx       ; Set i = 2
+    jmp .L8             ; Goto test
+.L9:                    ; Loop:
+    imulq %rdx, %rax    ; Compute result *= i
+    addq $1, %rdx       ; Increment i
+.L8:                    ; Test:
+    cmpq %rdi, %rdx     ; Compare i:n
+    jle .L9             ; If <=, goto loop
+    rep; ret            ; Return
+```
+
+### 总结
+
+循环结构是控制程序执行流程的关键技术，通过条件测试和跳转指令的组合，可以实现不同类型的循环。在实际编程中，选择合适的循环结构和转换策略，可以有效提高程序的执行效率和可读性。
