--- a/03_程序的机器级表示/3.7_程序/00_3.7.1_运行时栈.md
+++ b/03_程序的机器级表示/3.7_程序/00_3.7.1_运行时栈.md
@@ -5,3 +5,117 @@ Lecture: 03_程序的机器级表示/3.7_程序
 Content: 00_3.7.1_运行时栈
 """
 
+### 3.7.1 运行时栈
+
+在机器级编程中，运行时栈（run-time stack）是管理函数调用和内存分配的重要机制。它采用先进后出的（Last In, First Out, LIFO）原则，支持临时存储局部变量、函数参数、返回地址和保存寄存器状态。以下是对这一章节的详细分析。
+
+#### 栈的基本结构
+
+在 x86-64 架构中，栈向低地址方向增长，栈顶由栈指针寄存器 %rsp 指向。数据可以通过 `pushq` 和 `popq` 指令进行压栈和出栈操作，此外也可以通过直接修改 %rsp 寄存器的值来分配或释放栈空间。
+
+当一个函数需要使用寄存器无法存储的额外空间时，它会在栈上分配空间。这部分空间称为函数的栈帧（stack frame）。栈帧包括以下几部分内容：
+- **参数传递区**：用于传递超过六个整数参数时的额外参数。
+- **返回地址**：存储调用函数时的返回地址。
+- **保存的寄存器**：保存调用者的寄存器状态。
+- **局部变量**：存储函数内部使用的局部变量。
+
+#### 栈帧的结构
+
+如下图所示，栈帧的结构可以根据需要进行裁剪，当某些部分不需要时，可以省略。
+
+```
+. . .
+. . .
+
+栈底部
+
+栈顶
+
+参数 n
+
+参数 7
+
+参数传递区
+
+返回地址
+
+局部变量
+
+保存的寄存器
+
+栈指针 %rsp
+
+更早的帧
+
+地址递增方向
+
+调用函数 P 的栈帧
+
+执行函数 Q 的栈帧
+```
+
+#### 栈的操作
+
+1. **压栈（Push）**：将数据推入栈顶。通常使用 `pushq` 指令或直接减小 %rsp 寄存器的值。例如：
+   ```assembly
+   pushq %rax        ; 将 %rax 寄存器的值压入栈
+   subq $8, %rsp     ; 分配 8 字节的栈空间
+   ```
+
+2. **出栈（Pop）**：从栈顶弹出数据。通常使用 `popq` 指令或直接增大 %rsp 寄存器的值。例如：
+   ```assembly
+   popq %rax         ; 将栈顶的值弹出到 %rax 寄存器
+   addq $8, %rsp     ; 释放 8 字节的栈空间
+   ```
+
+#### 函数调用与返回
+
+函数调用时，会将返回地址压入栈，以便函数执行完毕后能正确返回调用点。常见的调用和返回指令包括：
+- **调用指令 `call`**：将返回地址压入栈，并跳转到被调用函数的入口。例如：
+  ```assembly
+  call printf       ; 调用 printf 函数
+  ```
+- **返回指令 `ret`**：从栈中弹出返回地址，并跳转到该地址继续执行。例如：
+  ```assembly
+  ret               ; 返回到调用点
+  ```
+
+在调用过程中，调用函数 P 会暂停执行，而被调用函数 Q 会在栈上分配自己的栈帧。Q 完成执行后，恢复 P 的执行，并释放 Q 的栈帧 。
+
+#### 栈帧示例
+
+考虑一个 C 函数调用的示例：
+
+```c
+long add(long a, long b) {
+    return a + b;
+}
+
+long caller() {
+    long result = add(1, 2);
+    return result;
+}
+```
+
+对应的汇编代码如下：
+
+```assembly
+caller:
+    subq $8, %rsp         ; 分配 8 字节的栈空间
+    movq $1, %rdi         ; 将 1 作为第一个参数
+    movq $2, %rsi         ; 将 2 作为第二个参数
+    call add              ; 调用 add 函数
+    addq $8, %rsp         ; 释放 8 字节的栈空间
+    ret                   ; 返回调用点
+
+add:
+    movq %rdi, %rax       ; 将第一个参数存储到 %rax
+    addq %rsi, %rax       ; 将第二个参数加到 %rax
+    ret                   ; 返回调用点
+```
+
+在这个示例中，`caller` 函数首先分配了 8 字节的栈空间，然后调用 `add` 函数。`add` 函数在完成加法运算后，返回结果并释放栈空间。
+
+### 总结
+
+运行时栈是管理函数调用和内存分配的关键机制。通过栈，可以有效地管理函数参数、返回地址、局部变量和寄存器状态。理解运行时栈的工作原理，对于编写高效的低级代码和优化程序性能具有重要意义 。
