--- a/03_程序的机器级表示/3.7_程序/01_3.7.2_控制转移.md
+++ b/03_程序的机器级表示/3.7_程序/01_3.7.2_控制转移.md
@@ -5,3 +5,77 @@ Lecture: 03_程序的机器级表示/3.7_程序
 Content: 01_3.7.2_控制转移
 """
 
+### 3.7.2 控制转移
+
+在机器级编程中，控制转移是函数调用和返回的核心机制。在 x86-64 架构中，通过 `call` 和 `ret` 指令来实现控制从一个函数转移到另一个函数，并在函数执行完毕后返回原调用点。以下是对这一章节的详细分析。
+
+#### 控制转移的基本概念
+
+控制从函数 P 转移到函数 Q 仅仅涉及设置程序计数器 (PC) 为 Q 的代码起始地址。然而，当需要从 Q 返回时，处理器必须知道应当恢复 P 执行的位置。这个信息通过在调用 Q 时使用 `call` 指令记录下来。`call` 指令将一个地址 A 压入栈中，并将 PC 设置为 Q 的起始地址。压入栈的地址 A 称为返回地址，它是 `call` 指令之后的指令地址。相应地，`ret` 指令则会从栈中弹出地址 A 并将 PC 设置为 A。
+
+#### `call` 和 `ret` 指令
+
+`call` 和 `ret` 指令的基本形式如下：
+
+- `call Label`：直接调用
+- `call *Operand`：间接调用
+- `ret`：返回
+
+在汇编代码中，`call` 指令可以是直接调用，也可以是间接调用。直接调用的目标地址由标签指定，而间接调用的目标地址由操作数指定。
+
+#### 执行 `call` 和 `ret` 的过程
+
+执行 `call` 和 `ret` 指令的过程可以通过以下步骤来理解：
+
+1. **执行 `call` 指令**：
+   - 处理器将返回地址（即 `call` 指令的下一条指令地址）压入栈。
+   - 将 PC 设置为被调用函数的起始地址。
+
+2. **执行 `ret` 指令**：
+   - 处理器从栈中弹出返回地址。
+   - 将 PC 设置为弹出的返回地址。
+
+通过这两个指令，处理器能够在函数调用和返回时正确地管理程序控制流。
+
+#### 示例分析
+
+以下是 `call` 和 `ret` 指令在实际代码中的应用示例：
+
+```assembly
+multstore:
+    pushq %rbx          ; 保存 %rbx 寄存器
+    movq %rdx, %rbx     ; 将 %rdx 的值移动到 %rbx
+    ...
+    ret                 ; 返回
+
+main:
+    ...
+    call multstore      ; 调用 multstore 函数
+    ...
+```
+
+在这个示例中，`main` 函数调用 `multstore` 函数。`call` 指令将返回地址压入栈，并跳转到 `multstore` 的起始地址。`multstore` 完成执行后，通过 `ret` 指令返回 `main` 函数。
+
+#### 图示说明
+
+图 3.26 展示了 `call` 和 `ret` 指令执行的过程。假设有两个函数 `main` 和 `multstore`，在 `main` 中调用 `multstore`：
+
+1. **执行 `call` 之前**：
+   - %rip 指向 `call` 指令。
+   - %rsp 指向栈顶。
+
+2. **执行 `call` 之后**：
+   - 返回地址被压入栈中。
+   - %rip 设置为 `multstore` 的起始地址。
+   - %rsp 更新为新的栈顶地址。
+
+3. **执行 `ret` 之后**：
+   - 从栈中弹出返回地址。
+   - %rip 恢复为返回地址。
+   - %rsp 恢复为调用 `multstore` 之前的栈顶地址。
+
+通过这种机制，函数调用和返回能够准确地恢复执行上下文。
+
+### 总结
+
+控制转移是实现函数调用和返回的关键机制。在 x86-64 架构中，通过 `call` 和 `ret` 指令，可以有效地管理程序的控制流，确保在函数调用和返回时正确地恢复执行位置。这一机制对编写和优化低级别代码具有重要意义  。
