--- a/03_程序的机器级表示/3.8_数组分配和访问/01_3.8.2_指针运算.md
+++ b/03_程序的机器级表示/3.8_数组分配和访问/01_3.8.2_指针运算.md
@@ -5,3 +5,46 @@ Lecture: 03_程序的机器级表示/3.8_数组分配和访问
 Content: 01_3.8.2_指针运算
 """
 
+## 3.8.2 指针运算
+
+### 章节概述
+在《深入理解计算机系统》第3章“程序的机器级表示”中，第3.8.2节讨论了指针运算的基本原理。在C语言中，指针运算是一种强大的工具，允许开发者进行高效的内存操作和数组处理。本节内容包括指针运算的定义、内存地址计算、指针与数组的关系，以及x86-64架构中指针运算的实现。
+
+### 指针运算的基本原理
+指针运算包括指针的生成、解引用和指针算术。C语言允许对指针进行算术运算，这些运算根据指针所引用的数据类型的大小进行缩放。
+
+#### 指针的生成和解引用
+- 生成指针：使用`&`操作符生成指向变量的指针。例如，`&a`生成一个指向变量`a`的指针。
+- 解引用指针：使用`*`操作符解引用指针，获取或设置指针指向的内存位置的值。例如，`*p`获取指针`p`指向的值，`*p = 10`设置指针`p`指向的位置的值为10。
+
+#### 指针算术
+指针算术是指对指针进行加减运算。例如，如果`p`是一个指向类型为`T`的数据的指针，其值为`xp`，则表达式`p+i`的值为`xp + L*i`，其中`L`是类型`T`的数据大小。这个运算可以用于遍历数组或内存块。
+
+### 指针与数组的关系
+数组和指针在C语言中有密切的关系。数组名在表达式中通常会被转换为指向其第一个元素的指针。例如，`A[i]`可以表示为`*(A+i)`，这计算了数组`A`中第`i`个元素的地址并访问该地址的值。
+
+#### 示例
+假设有一个整数数组`E`和一个整数索引`i`，以下是一些常见的表达式及其对应的汇编代码：
+
+- `E`：表示数组的起始地址，类型为`int*`，汇编代码：`movl %rdx, %rax`
+- `E[0]`：表示数组的第一个元素，类型为`int`，汇编代码：`movl (%rdx), %eax`
+- `E[i]`：表示数组的第`i`个元素，类型为`int`，汇编代码：`movl (%rdx, %rcx, 4), %eax`
+- `&E[2]`：表示数组的第`2`个元素的地址，类型为`int*`，汇编代码：`leaq 8(%rdx), %rax`
+- `E+i-1`：表示数组的第`i-1`个元素的地址，类型为`int*`，汇编代码：`leaq -4(%rdx, %rcx, 4), %rax`
+- `*(E+i-3)`：表示数组的第`i-3`个元素的值，类型为`int`，汇编代码：`movl -12(%rdx, %rcx, 4), %eax`
+- `&E[i]-E`：表示数组的第`i`个元素与数组起始地址的差值，类型为`long`，汇编代码：`movq %rcx, %rax`
+
+### 内存地址计算
+在x86-64架构中，指针运算通过基址加索引的方式实现。基址寄存器、索引寄存器和缩放因子结合用于计算内存地址。例如，指令`movl (%rdx,%rcx,4), %eax`计算地址`xE + 4*i`，读取该地址的内存内容，并将其存储到寄存器%eax中。缩放因子可以是1、2、4或8，覆盖了常见的基本数据类型的大小。
+
+### 指针运算的应用
+指针运算在数组遍历、内存分配和访问、字符串处理等方面有广泛的应用。例如，遍历数组可以通过指针算术实现：
+```c
+for (int *p = array; p < array + N; p++) {
+    // 处理*p
+}
+```
+这个循环通过指针算术依次访问数组的每个元素，避免了数组下标运算的开销。
+
+### 总结
+指针运算是C语言中处理数组和内存的强大工具，通过理解指针的生成、解引用和算术运算，可以编写高效的内存访问代码。在x86-64架构下，指针运算通过基址加索引的方式实现，支持灵活的内存地址计算。掌握这些基本原理有助于编写高效且健壮的程序。
