--- a/03_程序的机器级表示/3.9_异质数据结构/01_3.9.2_联合.md
+++ b/03_程序的机器级表示/3.9_异质数据结构/01_3.9.2_联合.md
@@ -5,3 +5,85 @@ Lecture: 03_程序的机器级表示/3.9_异质数据结构
 Content: 01_3.9.2_联合
 """
 
+## 3.9.2 联合
+
+### 章节概述
+在《深入理解计算机系统》第3章“程序的机器级表示”中，第3.9.2节讨论了联合（union）的基本原理。联合是一种允许单个对象根据不同的类型进行引用的C语言数据结构。与结构体类似，联合的声明语法与结构体相同，但语义却大不相同。联合中的所有字段共享同一块内存，而不是不同字段引用不同的内存块。
+
+### 联合的定义
+联合的定义与结构体非常类似，只是语义不同。以下是一个联合的定义示例：
+```c
+union U3 {
+    char c;
+    int i[2];
+    double v;
+};
+```
+在这个定义中，联合`U3`包含一个字符类型的字段`c`，一个包含两个整数的数组`i`，以及一个双精度浮点数类型的字段`v`。无论引用哪一个字段，它们都指向联合内存的同一个位置。
+
+### 内存布局
+联合中的所有字段共享同一块内存区域，联合的大小等于其最大字段的大小。例如，在一个x86-64 Linux系统中，以上定义的联合`U3`的内存布局如下：
+
+| 类型 | c | i | v | 总大小 |
+|------|---|---|---|-------|
+| S3   | 0 | 4 | 16| 24    |
+| U3   | 0 | 0 | 0 | 8     |
+
+可以看到，联合`U3`的总大小为8字节，因为其中最大的字段是双精度浮点数`v`，占用8字节。引用联合类型指针`union U3 *p`时，`p->c`、`p->i[0]`和`p->v`都会引用数据结构的起始位置。
+
+### 联合的应用
+联合可以在多种上下文中使用，但也可能导致一些难以发现的错误，因为它绕过了C语言的类型系统。以下是一些使用联合的常见场景：
+
+#### 内存节省
+在某些情况下，我们知道数据结构中的不同字段使用是互斥的，这时可以将这些字段声明为联合，而不是结构体，从而减少总的内存分配。例如，假设我们要实现一个二叉树数据结构，其中每个叶子节点有两个双精度数据值，每个内部节点有指向两个子节点的指针，但没有数据。如果我们用结构体来声明，每个节点需要32字节，有一半的字节在每种节点类型中是浪费的：
+```c
+struct node_s {
+    struct node_s *left;
+    struct node_s *right;
+    double data[2];
+};
+```
+但是如果我们用联合来声明，则每个节点只需要16字节：
+```c
+union node_u {
+    struct {
+        union node_u *left;
+        union node_u *right;
+    } internal;
+    double data[2];
+};
+```
+这种编码方式没有方法来确定一个节点是叶子节点还是内部节点。一个常见的方法是引入一个枚举类型来定义联合的不同选择，然后创建一个包含标签字段和联合的结构体：
+```c
+typedef enum { N_LEAF, N_INTERNAL } nodetype_t;
+struct node_t {
+    nodetype_t type;
+    union {
+        struct {
+            struct node_t *left;
+            struct node_t *right;
+        } internal;
+        double data[2];
+    } node;
+};
+```
+通过这种方式，我们可以使用`type`字段来区分节点类型。
+
+### 联合的优势和劣势
+#### 优势
+- **内存节省**：联合通过共享内存来减少总的内存使用，这在资源有限的系统中尤为重要。
+- **灵活性**：联合允许一个内存块根据不同的上下文来解释，这在某些低级别编程中非常有用。
+
+#### 劣势
+- **潜在的错误**：由于联合绕过了类型系统，如果使用不当，可能会导致难以发现的错误。例如，意外地使用错误的字段可能会导致数据被错误地解释。
+- **调试困难**：由于联合的内存布局和字段的重叠，调试联合相关的错误可能会比较困难。
+
+### 实际应用中的示例
+联合在实际应用中有广泛的使用，特别是在需要节省内存或需要灵活数据解释的场景中。以下是一些实际应用中的示例：
+
+1. **设备驱动**：在设备驱动程序中，联合常用于表示设备寄存器的不同视图。例如，一个寄存器可以同时作为一个32位整数和四个8位字节来访问。
+2. **协议解析**：在网络协议解析中，联合常用于表示协议头部的不同字段视图，从而简化协议处理代码。
+3. **数据转换**：在数据转换或序列化过程中，联合可以用于在不同数据格式之间快速转换。
+
+### 总结
+本节详细讨论了联合的定义、内存布局和应用。联合允许单个对象根据不同类型进行引用，通过共享内存来减少总的内存使用。理解联合的基本原理和应用场景，有助于在编写代码时充分利用其优势，同时避免潜在的错误。
