--- a/03_程序的机器级表示/3.5_算术和逻辑运算/04_3.5.5_特殊算术运算.md
+++ b/03_程序的机器级表示/3.5_算术和逻辑运算/04_3.5.5_特殊算术运算.md
@@ -5,3 +5,64 @@ Lecture: 03_程序的机器级表示/3.5_算术和逻辑运算
 Content: 04_3.5.5_特殊算术运算
 """
 
+### 3.5.5 特殊算术运算
+
+在机器级表示中，特殊算术运算对于处理大数和复杂的算术操作非常重要。x86-64 指令集提供了一些指令来支持128位（16字节）数的操作。这些操作通常涉及乘法和除法运算。下面是对这一章节的详细分析。
+
+#### 128位乘法与除法
+
+对于64位整数的乘法，结果可能需要128位来表示。x86-64指令集提供了支持128位结果的乘法和除法操作。Intel将这种16字节的量称为“八字”（oct word）。以下是这些特殊算术操作的描述：
+
+- `imulq S`: 有符号全乘法，将乘积存储在寄存器对 `%rdx:%rax` 中。执行 `R[%rdx]:R[%rax] ← S × R[%rax]`。
+- `mulq S`: 无符号全乘法，将乘积存储在寄存器对 `%rdx:%rax` 中。执行 `R[%rdx]:R[%rax] ← S × R[%rax]`。
+- `cqto`: 将64位符号扩展为128位，存储在 `%rdx:%rax` 中。执行 `R[%rdx]:R[%rax] ← SignExtend(R[%rax])`。
+- `idivq S`: 有符号除法，将商存储在 `%rax` 中，余数存储在 `%rdx` 中。执行 `R[%rdx]:R[%rax] ÷ S` 以及 `R[%rdx] ← R[%rdx]:R[%rax] mod S`。
+- `divq S`: 无符号除法，将商存储在 `%rax` 中，余数存储在 `%rdx` 中。执行 `R[%rdx]:R[%rax] ÷ S` 以及 `R[%rdx] ← R[%rdx]:R[%rax] mod S`。
+
+这些操作允许在单个指令中处理更大范围的数值，从而提高了计算的效率和精度。
+
+#### `imulq` 指令
+
+`imulq` 指令有两种形式，一种是基本的乘法指令，用于生成两个64位操作数的64位乘积。另一种形式是用于生成128位乘积。如下是两种形式的例子：
+
+- `imulq %rbx, %rax`: 将 `%rbx` 和 `%rax` 相乘，结果存储在 `%rax` 中，只保留低64位。
+- `imulq $3, %rbx, %rax`: 将 `%rbx` 的值乘以3，结果存储在 `%rax` 中，保留低64位。
+- `imulq %rbx`: 将 `%rbx` 的值与 `%rax` 的值相乘，结果存储在 `%rdx:%rax` 中，保留128位。
+
+#### 整数溢出与处理
+
+由于编码长度有限，计算机算术与传统整数算术和实数算术有很大的不同。有限长度会导致数字溢出，当它们超出表示范围时。这在进行浮点运算时也会遇到下溢问题，即数值接近0.0时变为0。
+
+在C语言和大多数其他编程语言中，有限整数算术相较于真正的整数算术有一些奇特的性质。例如，表达式 `x * x` 可能因为溢出而计算出负数。然而，无符号和二进制补码算术满足许多整数算术的性质，包括结合律、交换律和分配律。这允许编译器进行许多优化。例如，在将表达式 `7 * x` 替换为 `(x << 3) - x` 时，利用了这些性质以及移位与乘以2的幂之间的关系。
+
+#### 示例分析
+
+考虑以下C代码：
+```c
+long special_arith(long x, long y) {
+    long result;
+    __asm__ ("imulq %1, %0"
+             : "=r"(result)
+             : "r"(y), "0"(x));
+    return result;
+}
+```
+其汇编代码如下：
+```assembly
+special_arith:
+    imulq %rsi, %rdi  ; 将 %rsi 和 %rdi 相乘，结果存储在 %rdi 中
+    movq %rdi, %rax   ; 将结果移动到 %rax 中以返回
+    ret
+```
+这个例子展示了如何使用 `imulq` 指令来执行乘法运算，并将结果存储在寄存器中返回。
+
+#### 特殊算术操作的应用
+
+特殊算术操作在处理大数、科学计算和高精度运算中有广泛的应用。例如：
+1. **大整数运算**：在加密算法中，常常需要对大整数进行乘法和除法运算。
+2. **科学计算**：在科学计算和仿真中，常常需要高精度的乘法和除法运算。
+3. **高精度运算**：在金融计算和其他需要高精度的领域，这些操作也是必不可少的。
+
+### 总结
+
+特殊算术运算在机器级编程中起着至关重要的作用。理解和掌握这些操作对于处理复杂的算术运算和优化程序性能具有重要意义。在实际应用中，这些操作可以显著提高计算效率和精度。
