--- a/03_程序的机器级表示/3.9_异质数据结构/02_3.9.3_数据对齐.md
+++ b/03_程序的机器级表示/3.9_异质数据结构/02_3.9.3_数据对齐.md
@@ -5,3 +5,62 @@ Lecture: 03_程序的机器级表示/3.9_异质数据结构
 Content: 02_3.9.3_数据对齐
 """
 
+## 3.9.3 数据对齐
+
+### 章节概述
+在《深入理解计算机系统》第3章“程序的机器级表示”中，第3.9.3节讨论了数据对齐的基本原理。数据对齐是计算机系统中一个重要的概念，影响内存访问的效率和正确性。许多计算机系统对基本数据类型的地址有特定的要求，通常要求地址是某个值K（通常是2、4或8）的倍数。本文将详细分析数据对齐的必要性、对齐规则以及对程序性能的影响。
+
+### 数据对齐的必要性
+数据对齐的主要目的是简化硬件设计，提升内存访问效率。例如，一个处理器可能一次从内存中获取8个字节，并且要求地址必须是8的倍数。如果我们能确保任何双精度浮点数的地址都是8的倍数，那么读写这个值只需一次内存操作。如果数据未对齐，可能需要进行两次内存访问，因为对象可能会跨越两个8字节的内存块。
+
+尽管x86-64硬件能够正确处理未对齐的数据，但Intel建议对齐数据以提高内存系统性能。对齐规则基于这样一个原则：任何K字节的基本对象的地址必须是K的倍数。具体来说，不同类型的对齐要求如下：
+
+| K  | 类型                     |
+|----|--------------------------|
+| 1  | char                     |
+| 2  | short                    |
+| 4  | int, float               |
+| 8  | long, double, char *     |
+
+### 对齐规则的实现
+编译器通过确保每种数据类型的组织和分配方式，使得每个对象满足其对齐要求来强制实现对齐。例如，对于全局数据，编译器在汇编代码中放置指示符来指示所需的对齐方式。以下是一个跳转表的汇编代码声明示例，其中包含了一个对齐指示符：
+```assembly
+.align 8
+```
+这确保了跳转表的起始地址是8的倍数，因为每个表项长度为8字节，后续元素也会遵循8字节对齐的限制。
+
+### 结构体对齐
+对于涉及结构体的代码，编译器可能需要在字段分配中插入间隙，以确保每个结构体元素满足其对齐要求。例如，考虑以下结构体声明：
+```c
+struct S1 {
+    int i;
+    char c;
+    int j;
+};
+```
+如果编译器使用最小的9字节分配，布局如下：
+
+| 偏移量 | 内容   |
+|--------|--------|
+| 0      | i      |
+| 4      | c      |
+| 5      | j      |
+
+这样无法同时满足`i`（偏移量0）和`j`（偏移量5）的4字节对齐要求。因此，编译器在字段`c`和`j`之间插入了3字节的间隙，使得`j`的偏移量为8，总体结构大小为12字节。
+
+### 数组中的结构体对齐
+编译器还可能需要在结构体的末尾添加填充字节，以确保结构体数组的每个元素都满足其对齐要求。例如，考虑以下结构体声明：
+```c
+struct S2 {
+    int i;
+    int j;
+    char c;
+};
+```
+如果我们将这个结构体打包成9字节，我们可以确保字段`i`和`j`满足对齐要求，只要结构体的起始地址满足4字节对齐要求。但是，声明结构体数组时，如`struct S2 d[4];`，由于每个元素占用9字节，无法满足数组中每个元素的对齐要求。编译器会为结构体`S2`分配12字节，其中最后3字节是填充字节，这样数组的每个元素地址分别为`xd`、`xd + 12`、`xd + 24`和`xd + 36`，确保对齐要求得到满足。
+
+### 对程序性能的影响
+对齐不仅影响数据访问的正确性，还直接影响程序性能。未对齐的数据访问可能需要多次内存访问，降低访问效率。而且，对于一些特殊指令（如SSE指令），未对齐的内存访问会导致程序异常。因此，编译器和运行时系统必须确保任何分配给数据结构的内存满足对齐要求。例如，对于支持AVX指令的最新x86-64处理器，尽管不再强制要求对齐，但对齐数据仍然能显著提高性能。
+
+### 总结
+本节详细讨论了数据对齐的定义、实现方式及其对程序性能的影响。数据对齐通过简化硬件设计和提高内存访问效率，在现代计算机系统中起着至关重要的作用。理解数据对齐的基本原理和应用，有助于编写高效且健壮的程序，并通过合理的对齐策略进一步提升程序性能。
